Updated Python-Review Jupyter Notebook for 2022-05-18 lecture

--- a/Phase1/Python-Review_blank.ipynb
+++ b/Phase1/Python-Review_blank.ipynb
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "# Code here to change sides \n",
-    "side1, side2, side3 = \"rice\", \"seaweed\", \"pickled onions\""
+    "side1, side2, side3 = \"rice\", \"seaweed\", \"tempura\""
    ]
   },
   {
@@ -134,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ginger chicken 3.5 rice seaweed pickled onions\n"
+      "ginger chicken 3.5 rice seaweed tempura\n"
      ]
     }
    ],
@@ -184,23 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
     }
    ],
    "source": [
     "# Code here to check other variable types\n",
-    "type(oz_of_protein)"
+    "type(oz_of_protein)\n",
+    "type(number_of_sides)\n",
+    "type(great_bento)\n",
+    "print(type(great_bento))"
    ]
   },
   {
@@ -256,9 +256,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no carbs, please!\n"
+     ]
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "if (main == 'rice'):\n",
@@ -280,12 +288,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Update the code below, based on your own preferences\n",
-    "if (main != 'rice'):\n",
+    "if (protein != 'salmon'):\n",
     "    great_bento = False\n",
     "elif(oz_of_protein < 3.5):\n",
     "    great_bento = False\n",
@@ -295,16 +303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -359,10 +367,10 @@
     {
      "data": {
       "text/plain": [
-       "'pickled onions'"
+       "'tempura'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,18 +389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['rice', 'seaweed', 'pickled onions']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sushi', 'ginger chicken', 'rice', 'seaweed', 'tempura']\n",
+      "rice\n"
+     ]
     }
    ],
    "source": [
@@ -400,7 +406,11 @@
     "# Note that our 3rd side is the 4th element above, but we use 5 in the range\n",
     "# Play around with these numbers, and start to build some understanding of \n",
     "# which elements are where exactly in the list\n",
-    "bento_ingredients[2:5]"
+    "bento_ingredients[2:5]\n",
+    "bento_ingredients[0:4:2]\n",
+    "bento_ingredients[0] = \"sushi\"\n",
+    "print(bento_ingredients)\n",
+    "print(main)"
    ]
   },
   {
@@ -412,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,33 +439,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Code here to test that out\n",
-    "off_item = bento_ingredients.pop()"
+    "off_item = bento_ingredients.pop(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'mango drink'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rice\n",
+      "['sushi', 'ginger chicken', 'seaweed', 'tempura']\n"
+     ]
     }
    ],
    "source": [
     "# Now check what your list looks like - is that last item still there?\n",
-    "off_item"
+    "print(off_item)\n",
+    "print(bento_ingredients)"
    ]
   },
   {
@@ -467,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -476,7 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'd like my bento box to contain: rice, ginger chicken, rice, seaweed, and pickled onions\n"
+      "I'd like my bento box to contain: sushi, ginger chicken, seaweed, and tempura\n"
      ]
     }
    ],
@@ -495,33 +504,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My bento box will include rice and ginger chicken.\n"
+      "My bento box will include sushi and ginger chicken.\n"
      ]
     }
    ],
    "source": [
     "# Run this cell without changes\n",
     "# This is an f-string!\n",
-    "print(f\"My bento box will include {bento_ingredients[0]} and {bento_ingredients[1]}.\")"
+    "print(f\"My bento box will include {bento_ingredients[0]} and {bento_ingredients[1]}.\")T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My bento box will include rice and ginger chicken.\n"
+      "My bento box will include sushi and ginger chicken.\n"
      ]
     }
    ],
@@ -532,14 +541,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My bento box will include rice and ginger chicken.\n"
+      "My bento box will include sushi and ginger chicken.\n"
      ]
     }
    ],
@@ -585,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -612,27 +621,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Code here to create a dictionary from your bento ingredients\n",
     "# Change things up to whatever you like!\n",
+    "bento_keys = [\"main\", \"protein\", \"oz_of_protein\", \"side1\", \"side2\", \"side3\", \"great_bento\"]\n",
+    "bento_ingredients = [\"sushi\", \"salmon\", 3.5, \"rice\", \"seaweed\", \"tempura\", True]\n",
     "bento_dict = dict(zip(bento_keys, bento_ingredients))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['rice', 'ginger chicken', 'rice', 'seaweed', 'pickled onions']"
+       "['sushi', 'salmon', 3.5, 'rice', 'seaweed', 'tempura', True]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,14 +654,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'main': 'rice', 'protein': 'ginger chicken', 'side': 'rice'}\n",
+      "{'main': 'sushi', 'protein': 'salmon', 'oz_of_protein': 3.5, 'side1': 'rice', 'side2': 'seaweed', 'side3': 'tempura', 'great_bento': True}\n",
       "<class 'dict'>\n"
      ]
     }
@@ -671,11 +682,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tempura'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Practice accessing elements in your bento box\n"
+    "# Practice accessing elements in your bento box\n",
+    "bento_dict[\"side3\"]"
    ]
   },
   {
